# Crypto_research

./: .gitignore  Cargo.toml
src/: main.rs
src/utils/: get_binance_price.rs  get_crypto_pairs_binance.rs  get_uniswap_price.rs  mod.rs
